<?xml version="1.0" encoding="utf-8"?>


    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".AddActivity"
        android:background="@color/white"
        >

    <TextView
        android:id="@+id/add_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="60sp"
        android:fontFamily="sans-serif-thin"
        android:text="Add activity"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"/>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/outlinedTextField"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/add_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/collage"
            android:textColorHint="#0000FF"
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">

            <AutoCompleteTextView
                android:id="@+id/collage_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:background="#FFFFFF"
                android:textColor="@color/black"
                />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/outlinedTextField2"
            android:textColorHint="#0000FF"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/outlinedTextField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/major"
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">

            <AutoCompleteTextView
                android:id="@+id/major_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:background="#FFFFFF"
                android:textColor="@color/black"
                />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/outlinedTextField3"
            android:textColorHint="#0000FF"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/outlinedTextField2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/course"
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">

            <AutoCompleteTextView
                android:id="@+id/course_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:background="#FFFFFF"
                android:textColor="@color/black"
                />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/outlinedTextField4"
            android:textColorHint="#0000FF"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/outlinedTextField3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/room"
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">

            <AutoCompleteTextView
                android:id="@+id/room_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:background="#FFFFFF"
                android:textColor="@color/black"
                />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/outlinedTextField5"
            android:textColorHint="#0000FF"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/outlinedTextField4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/degree"
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">

            <AutoCompleteTextView
                android:id="@+id/degree_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:background="#FFFFFF"
                android:textColor="@color/black"
                />

        </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/outlinedTextField6"
        android:textColorHint="#0000FF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/outlinedTextField5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/type"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">

        <AutoCompleteTextView
            android:id="@+id/type_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:background="#FFFFFF"
            android:textColor="@color/black"
            />

    </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textField"
            android:textColorHint="#0000FF"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/outlinedTextField6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="11dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/description"

            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/description_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FFFFFF"
                android:textColor="@color/black"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Choose begin time"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textField"
            android:layout_marginTop="11dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            style="?attr/materialButtonOutlinedStyle"
        ></Button>

    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Choose end time"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button"
        android:layout_marginTop="10dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        style="?attr/materialButtonOutlinedStyle"
        ></Button>

    <Button
        android:id="@+id/button3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Choose day"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button2"
        android:layout_marginTop="10dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        style="?attr/materialButtonOutlinedStyle"
        ></Button>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/add_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"

            android:src="@drawable/ic_baseline_save_24"
            app:backgroundTint="@color/white"
            />



    </androidx.constraintlayout.widget.ConstraintLayout>

